--- a/Embedding/Embedding.csproj
+++ b/Embedding/Embedding.csproj
@@ -30,6 +30,17 @@
   <ItemGroup>
     <EmbeddedResource Include="App.xaml" />
     <EmbeddedResource Include="EmbeddingPage.xaml" />
+    <EmbeddedResource Include="Resources\bg_walkthrough_1_1.png" />
+    <EmbeddedResource Include="Resources\bg_walkthrough_1_2.png" />
+    <EmbeddedResource Include="Resources\bg_walkthrough_1_3.png" />
+    <EmbeddedResource Include="Resources\bg_walkthrough_1_4.png" />
+    <EmbeddedResource Include="Resources\bg_walkthrough_2_1.png" />
+    <EmbeddedResource Include="Resources\bg_walkthrough_2_2.png" />
+    <EmbeddedResource Include="Resources\bg_walkthrough_2_3.png" />
+    <EmbeddedResource Include="SessionsDetailsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -39,6 +50,14 @@
       <DependentUpon>EmbeddingPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\WalkthroughModel.cs" />
+    <Compile Include="ViewModels\EmbeddingPageViewModel.cs" />
+    <Compile Include="Converters\ImageFromManagedResourceConverter.cs" />
+    <Compile Include="ViewModels\SessionDetailsViewModel.cs" />
+    <Compile Include="SessionsDetailsPage.xaml.cs">
+      <DependentUpon>SessionsDetailsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SessionDetailModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -50,9 +69,27 @@
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\packages\Xamarin.Forms.2.5.0.121934\lib\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
+    <Reference Include="CarouselView.FormsPlugin.Abstractions">
+      <HintPath>..\packages\CarouselView.FormsPlugin.5.0.2\lib\portable-net45+netcore45+wpa81+wp8+MonoAndroid10+Xamarin.iOS10\CarouselView.FormsPlugin.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading">
+      <HintPath>..\packages\Xamarin.FFImageLoading.2.3.1\lib\portable-win+net45+wp80+win81+wpa81\FFImageLoading.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Platform">
+      <HintPath>..\packages\Xamarin.FFImageLoading.2.3.1\lib\portable-win+net45+wp80+win81+wpa81\FFImageLoading.Platform.dll</HintPath>
+    </Reference>
+    <Reference Include="FFImageLoading.Forms">
+      <HintPath>..\packages\Xamarin.FFImageLoading.Forms.2.3.1\lib\portable-win+net45+wp80+win81+wpa81\FFImageLoading.Forms.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets')" />
