--- a/Embedding/packages.config
+++ b/Embedding/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CarouselView.FormsPlugin" version="5.0.2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading" version="2.3.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.3.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
